fixed skills and attribute component alignment

--- a/src/app/components/skills/skills.component.css
+++ b/src/app/components/skills/skills.component.css
@@ -22,8 +22,12 @@ section{
         letter-spacing: 0rem !important;
     }
     .list-unstyled{
-        width: 95%;
-        margin: auto;
+        width: 55% !important;
+        margin: auto !important;
+        /* text-align: center; */
+    }
+    .card-text{
+        width: 100% !important;
     }
 }
 
